Update pricing page with latest changes

--- a/index.html
+++ b/index.html
@@ -1382,18 +1382,19 @@
 
     </section>
 
-    <section class="w-full bg-gradient-to-br from-[#0a0a0a] to-[#1a767f] py-20 px-4 text-white font-[Montserrat]">
-        <div class="text-center mb-12">
-            <h2
-                class="text-3xl md:text-4xl font-black text-transparent bg-clip-text bg-gradient-to-r from-[#ffcd30] to-white tracking-tight mb-6 animate-pulse text-center">
-                Still Not Sure?
-            </h2>
+   <section class="w-full bg-gradient-to-br from-[#0a0a0a] to-[#1a767f] py-14 px-4 text-white font-[Montserrat]">
+  <div class="max-w-2xl mx-auto text-center mb-10 px-4">
+   <h2
+  class="text-4xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-[#ffcd30] to-white tracking-tight mb-4 animate-pulse">
+  Still Not Sure?
+</h2>
 
-            <div>
-                <p class="text-base font-semibold text-white text-center mb-6">
-                    Real answers to real questions — no fluff.
-                </p>
-                <div class="space-y-6">
+    <p class="text-sm font-medium text-white/90">
+      Real answers to real questions — no fluff.
+    </p>
+  </div>
+
+  <div class="max-w-2xl mx-auto space-y-4 px-4">
                     <!-- FAQ Card 1 -->
                     <div
                         class="faq-card group transition-all duration-300 rounded-2xl bg-white/10 border border-white/30 hover:shadow-xl overflow-hidden">
@@ -1622,43 +1623,34 @@
             });
         </script>
     </section>
- <section class="w-full bg-gradient-to-r from-[#0a0a0a] to-[#1a767f] px-6 py-10 text-white font-[Montserrat]">
-  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-6">
+    <section class="w-full bg-gradient-to-r from-[#0a0a0a] to-[#1a767f] px-6 py-10 text-white font-[Montserrat]">
+        <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-6">
 
-    <!-- Left: Text -->
-    <div>
-      <h3 class="text-2xl md:text-3xl font-bold leading-snug mb-2">
-        Join 3,000+ local business owners using automation to save time and serve more customers.
-      </h3>
-      <p class="text-sm md:text-base text-white/90">
-        Every week, we show you how real businesses automate the chaos. Quick read. Big results.
-      </p>
-    </div>
+            <!-- Left: Text -->
+            <div>
+                <h3 class="text-2xl md:text-3xl font-bold leading-snug mb-2">
+                    Join 3,000+ local business owners using automation to save time and serve more customers.
+                </h3>
+                <p class="text-sm md:text-base text-white/90">
+                    Every week, we show you how real businesses automate the chaos. Quick read. Big results.
+                </p>
+            </div>
 
-    <!-- Right: Scrollable Form Container with iframe -->
-    <div class="w-full h-[270px] overflow-auto rounded-md">
-      <iframe
-        src="https://api.leadconnectorhq.com/widget/form/XjtNPj5puaSllr5sF5Rt"
-        style="width:100%;height:100%;border:none;border-radius:3px"
-        id="inline-XjtNPj5puaSllr5sF5Rt"
-        data-layout="{'id':'INLINE'}"
-        data-trigger-type="alwaysShow"
-        data-trigger-value=""
-        data-activation-type="alwaysActivated"
-        data-activation-value=""
-        data-deactivation-type="neverDeactivate"
-        data-deactivation-value=""
-        data-form-name="Newsletter"
-        data-height="612"
-        data-layout-iframe-id="inline-XjtNPj5puaSllr5sF5Rt"
-        data-form-id="XjtNPj5puaSllr5sF5Rt"
-        title="Newsletter">
-      </iframe>
-    </div>
-  </div>
+            <!-- Right: Scrollable Form Container with iframe -->
+            <div class="w-full h-[270px] overflow-auto rounded-md">
+                <iframe src="https://api.leadconnectorhq.com/widget/form/XjtNPj5puaSllr5sF5Rt"
+                    style="width:100%;height:100%;border:none;border-radius:3px" id="inline-XjtNPj5puaSllr5sF5Rt"
+                    data-layout="{'id':'INLINE'}" data-trigger-type="alwaysShow" data-trigger-value=""
+                    data-activation-type="alwaysActivated" data-activation-value=""
+                    data-deactivation-type="neverDeactivate" data-deactivation-value="" data-form-name="Newsletter"
+                    data-height="612" data-layout-iframe-id="inline-XjtNPj5puaSllr5sF5Rt"
+                    data-form-id="XjtNPj5puaSllr5sF5Rt" title="Newsletter">
+                </iframe>
+            </div>
+        </div>
 
-  <script src="https://link.msgsndr.com/js/form_embed.js"></script>
-</section>
+        <script src="https://link.msgsndr.com/js/form_embed.js"></script>
+    </section>
 
 
 
