--- a/pricing.html
+++ b/pricing.html
@@ -335,7 +335,7 @@
       </ul>
       <a href="https://link.fastpaydirect.com/payment-link/681b7d30741ad11d9bdc1e20"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
-        Let’s Talk
+       I Want Brilliant
       </a>
     </div>
 
@@ -582,7 +582,7 @@
       <a href="https://link.fastpaydirect.com/payment-link/681b7d59082a6f09a9ee4725
         class=" block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90
         transition">
-        Let’s Talk
+      I Want Brilliant
       </a>
     </div>
   </div>
