--- a/index.html
+++ b/index.html
@@ -283,52 +283,51 @@
     </div>
 
 
-    <div class="flex flex-wrap justify-center gap-3 p-3">
-        <!-- Box 1: Phone -->
-        <div class="w-28 h-28 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-2">
-            <svg class="w-6 h-6 text-teal-600 animate-call mb-1" fill="none" stroke="currentColor" stroke-width="2"
-                viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-                <path
-                    d="M22 16.92v3a2 2 0 01-2.18 2A19.8 19.8 0 013.1 5.18 2 2 0 015 3h3a2 2 0 012 1.72c.2 1.38.76 2.72 1.64 3.86a2 2 0 01-.45 2.82l-1.27 1.27a16 16 0 006.29 6.29l1.27-1.27a2 2 0 012.82-.45c1.14.88 2.48 1.44 3.86 1.64A2 2 0 0122 16.92z" />
-            </svg>
-            <p class="font-semibold text-xs text-black leading-tight">While You Work...</p>
-            <p class="text-[10px] text-black leading-tight">Our assistant answers every call.</p>
-        </div>
-
-        <!-- Box 2: Clock -->
-        <div class="w-28 h-28 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-2">
-            <svg class="w-6 h-6 text-teal-600 animate-tick mb-1" fill="none" stroke="currentColor" stroke-width="2"
-                viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="10" />
-                <polyline points="12 6 12 12 16 14" />
-            </svg>
-            <p class="font-semibold text-xs text-black leading-tight">Book Appointments</p>
-            <p class="text-[10px] text-black leading-tight">Even when you are closed.
-            </p>
-        </div>
-
-        <!-- Box 3: SMS -->
-        <div class="w-28 h-28 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-2">
-            <svg class="w-6 h-6 text-teal-600 mb-1" fill="none" stroke="currentColor" stroke-width="2"
-                viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
-            </svg>
-            <p class="font-bold text-xs text-black uppercase leading-tight">Answers FAQs</p>
-            <p class="text-[10px] text-black leading-tight">Like store hours, pricing, availability.</p>
-        </div>
-
-        <!-- Box 4: Settings -->
-        <div class="w-28 h-28 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-2">
-            <svg class="w-6 h-6 text-teal-600 animate-spin-slow mb-1" fill="none" stroke="currentColor" stroke-width="2"
-                viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="3" />
-                <path
-                    d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 11-2.83 2.83l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 11-4 0v-.09a1.65 1.65 0 00-1-1.51 1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 11-2.83-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 110-4h.09a1.65 1.65 0 001.51-1 1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 112.83-2.83l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 114 0v.09c0 .66.39 1.26 1 1.51a1.65 1.65 0 001.82-.33l.06-.06a2 2 0 112.83 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9c0 .66.39 1.26 1 1.51H21a2 2 0 110 4h-.09c-.66 0-1.26.39-1.51 1z" />
-            </svg>
-            <p class="font-semibold text-xs text-black leading-tight">We set it up</p>
-            <p class="text-[10px] text-black leading-tight">You don’t need any tech skills.</p>
-        </div>
+   <div class="flex flex-wrap justify-center gap-4 p-4">
+    <!-- Box 1: Phone -->
+    <div class="w-36 h-36 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-3">
+        <svg class="w-8 h-8 text-teal-600 animate-call mb-2" fill="none" stroke="currentColor" stroke-width="2"
+            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+            <path
+                d="M22 16.92v3a2 2 0 01-2.18 2A19.8 19.8 0 013.1 5.18 2 2 0 015 3h3a2 2 0 012 1.72c.2 1.38.76 2.72 1.64 3.86a2 2 0 01-.45 2.82l-1.27 1.27a16 16 0 006.29 6.29l1.27-1.27a2 2 0 012.82-.45c1.14.88 2.48 1.44 3.86 1.64A2 2 0 0122 16.92z" />
+        </svg>
+        <p class="font-semibold text-sm text-black leading-tight">While You Work...</p>
+        <p class="text-xs text-black leading-tight">Our assistant answers every call.</p>
     </div>
+
+    <!-- Box 2: Clock -->
+    <div class="w-36 h-36 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-3">
+        <svg class="w-8 h-8 text-teal-600 animate-tick mb-2" fill="none" stroke="currentColor" stroke-width="2"
+            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10" />
+            <polyline points="12 6 12 12 16 14" />
+        </svg>
+        <p class="font-semibold text-sm text-black leading-tight">Book Appointments</p>
+        <p class="text-xs text-black leading-tight">Even when you are closed.</p>
+    </div>
+
+    <!-- Box 3: SMS -->
+    <div class="w-36 h-36 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-3">
+        <svg class="w-8 h-8 text-teal-600 mb-2" fill="none" stroke="currentColor" stroke-width="2"
+            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
+        </svg>
+        <p class="font-bold text-sm text-black uppercase leading-tight">Answers FAQs</p>
+        <p class="text-xs text-black leading-tight">Like store hours, pricing, availability.</p>
+    </div>
+
+    <!-- Box 4: Settings -->
+    <div class="w-36 h-36 bg-teal-50 shadow rounded-lg flex flex-col items-center justify-center text-center p-3">
+        <svg class="w-8 h-8 text-teal-600 animate-spin-slow mb-2" fill="none" stroke="currentColor" stroke-width="2"
+            viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="3" />
+            <path
+                d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 11-2.83 2.83l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 11-4 0v-.09a1.65 1.65 0 00-1-1.51 1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 11-2.83-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 110-4h.09a1.65 1.65 0 001.51-1 1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 112.83-2.83l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 114 0v.09c0 .66.39 1.26 1 1.51a1.65 1.65 0 001.82-.33l.06-.06a2 2 0 112.83 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9c0 .66.39 1.26 1 1.51H21a2 2 0 110 4h-.09c-.66 0-1.26.39-1.51 1z" />
+        </svg>
+        <p class="font-semibold text-sm text-black leading-tight">We set it up</p>
+        <p class="text-xs text-black leading-tight">You don’t need any tech skills.</p>
+    </div>
+</div>
 
     <!-- Custom Animations -->
     <style>
@@ -757,7 +756,7 @@
 
             <!-- CTA -->
             <div class="w-full flex justify-center mt-4">
-                <a href="https://mirajoagency.org/pricing-plan"
+                <a href="pricing.html"
                     class="text-[10px] px-4 py-1.5 bg-[#ffcd30] text-white rounded-full shadow-md hover:scale-105 hover:bg-[#e6b800] transition-all duration-300 font-semibold">
                     View Live Data
                 </a>
@@ -868,7 +867,7 @@
 
                             <!-- CTA -->
                             <div class="text-center mt-2">
-                                <a href="https://mirajoagency.org/pricing-plan" target="_blank"
+                                <a href="pricing.html" target="_blank"
                                     class="inline-block bg-[#ffcd30] text-white text-xs font-medium px-3 py-1.5 rounded-full hover:bg-[#e6b800] hover:scale-105 transition">
                                     Get Started
                                 </a>
