Update pricing page with latest changes

--- a/pricing.html
+++ b/pricing.html
@@ -420,7 +420,7 @@
           2 User Logins
         </li>
       </ul>
-      <a href="https://buy.stripe.com/28o15x5Rm10PfPa6oq"
+      <a href="https://buy.stripe.com/28E8wP5179w75FF66ffEk0l"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
         Get Started
       </a>
