Update pricing page with latest changes

--- a/pricing.html
+++ b/pricing.html
@@ -274,7 +274,7 @@
           Priority support
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/681b7b1778f571560d9532f9"
+      <a href="https://buy.stripe.com/9B6eVdalr6jVecb7ajfEk0p"
         class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition">
         Start with Genius
       </a>
@@ -333,7 +333,7 @@
           Full analytics dashboard
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/681b7d30741ad11d9bdc1e20"
+      <a href="https://buy.stripe.com/cNibJ12SZfUv3xxdyHfEk0r"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
        I Want Brilliant
       </a>
@@ -495,7 +495,7 @@
           3 User Logins
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/681b7d8b741ad1fcd7dc1e32"
+      <a href="https://buy.stripe.com/3cIcN59hn23F0llcuDfEk0o"
         class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition">
         Start with Genius
       </a>
@@ -579,7 +579,7 @@
           4 User Logins
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/681b7d59082a6f09a9ee4725
+      <a href="https://buy.stripe.com/8x23cv3X3cIj5FFeCLfEk0q"
         class=" block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90
         transition">
       I Want Brilliant
