Add vercel.json for clean /pricing route

--- a/pricing.html
+++ b/pricing.html
@@ -73,7 +73,7 @@
     <div class="relative z-10 max-w-3xl mx-auto fade-up">
       <h1 class="text-4xl font-extrabold text-white mb-4">Simple Pricing. Powerful Results.</h1>
       <p class="text-lg text-white/90 mb-8">
-        Pick the plan that fits your business—and get setup, support, and smart AI automations up and running today.
+        Pick the plan that fits your business and get setup, support, and smart AI automations up and running today.
       </p>
       <a href="#monthlyPlans"
         class="inline-block bg-white text-[var(--brand-teal)] font-semibold px-8 py-3 rounded-full hover:scale-105 transition">
