--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <!-- Desktop Nav -->
             <nav class="space-x-8 hidden md:flex text-black text-base font-light">
-                <a href="pricing.html" target="_blank"
+                <a href="pricing" target="_blank"
                     class="hover:text-[#1a767f] transition-colors duration-200">Pricing</a>
                 <a href="https://home.mirajoco.org/" class="hover:text-[#1a767f] transition-colors duration-200">MiRAjO
                     Collective</a>
@@ -143,7 +143,7 @@
 
         <div id="mobile-menu"
             class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-bold bg-white border-t border-gray-200">
-            <a href="pricing.html" target="_blank" class="block hover:text-[#1a767f] transition">Pricing</a>
+            <a href="pricing/index.html" target="_blank" class="block hover:text-[#1a767f] transition">Pricing</a>
             <a href="https://login.mirajoagency.org/" target="_blank"
                 class="block hover:text-[#1a767f] transition">Client Login</a>
             <a href="https://home.mirajoco.org/" class="block hover:text-[#1a767f] transition">MiRAjO Collective</a>
