Fix: adjusted Home link to clean / route on pricing page

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
-        <a href="index.html" class="hover:text-[var(--brand-teal)] transition">Home</a>
+        <a href="/" class="hover:text-[var(--brand-teal)] transition">Home</a>
         <a href="https://home.mirajoco.org/" class="hover:text-[var(--brand-teal)] transition">MiRAjO Collective</a>
         <a href="https://login.mirajoagency.org/" class="hover:text-[var(--brand-teal)] transition">Client Login</a>
       </nav>
@@ -60,7 +60,7 @@
       </button>
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
-      <a href="index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
+      <a href="/" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
       <a href="https://home.mirajoco.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">MiRAjO Collective</a>
       <a href="https://login.mirajoagency.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">Client Login</a>
     </div>
