--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
 
             <!-- CTA -->
             <div class="w-full flex justify-center mt-4">
-                <a href="pricing.html"
+                <a href="/pricing"
                     class="text-[10px] px-4 py-1.5 bg-[#ffcd30] text-white rounded-full shadow-md hover:scale-105 hover:bg-[#e6b800] transition-all duration-300 font-semibold">
                     View Live Data
                 </a>
@@ -867,7 +867,7 @@
 
                             <!-- CTA -->
                             <div class="text-center mt-2">
-                                <a href="pricing.html" target="_blank"
+                                <a href="/pricing" target="_blank"
                                     class="inline-block bg-[#ffcd30] text-white text-xs font-medium px-3 py-1.5 rounded-full hover:bg-[#e6b800] hover:scale-105 transition">
                                     Get Started
                                 </a>
