--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
     <header class="sticky top-0 z-50 bg-white/70 backdrop-blur-md shadow-md transition-all duration-300 ease-in-out">
         <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
             <!-- Logo -->
-            <div class="flex items-center space-x-3">
+            <a href="/" class="transition-transform duration-300 hover:scale-105">
                 <img src="img/logo.png" alt="MirajoAI Logo"
                     class="h-20 w-20 object-contain shadow-none bg-transparent border-none"
-                    style="background: transparent; box-shadow: none; border: none;" />
-            </div>
+                    style="background: transparent; box-shadow: none; border: none;"   />
+            </a>
 
             <!-- Desktop Nav -->
             <nav class="space-x-8 hidden md:flex text-black text-base font-light">
