--- a/pricing/index.html
+++ b/pricing/index.html
@@ -42,7 +42,7 @@
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md shadow-sm">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
      <a href="/" class="transition-transform duration-300 hover:scale-105">
-  <img src="img/logo.png" alt="MirajoAI Logo"
+  <img src="/img/logo.png" alt="MirajoAI Logo"
     class="h-20 w-20 object-contain shadow-none bg-transparent border-none"
     style="background: transparent; box-shadow: none; border: none;" />
 </a>
