Added Book a Demo CTA with GHL form link on home and pricing pages

--- a/index.html
+++ b/index.html
@@ -397,12 +397,13 @@
     </div>
     <!-- 🟡 CTA Button (Centered + Enhanced) -->
     <div class="flex justify-center mt-6">
-        <a href="tel:+17274859941">
+        <a href="https://api.leadconnectorhq.com/widget/form/ugRWgZyGNmk4kFNN80Ml" target="_blank"
+            rel="noopener noreferrer">
             <button
                 class="bg-[#ffcd30] text-white text-base font-semibold animate-bounce px-8 py-3 rounded-full shadow-lg hover:bg-[#e6b800] hover:scale-105 transition-all duration-300">
                 Book a Demo
             </button>
-        </a>
+                </a>
     </div>
 
 
