--- a/pricing/index.html
+++ b/pricing/index.html
@@ -41,11 +41,11 @@
   <!-- NAVBAR -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md shadow-sm">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-     <a href="/" class="transition-transform duration-300 hover:scale-105">
-  <img src="/img/logo.png" alt="MirajoAI Logo"
-    class="h-20 w-20 object-contain shadow-none bg-transparent border-none"
-    style="background: transparent; box-shadow: none; border: none;" />
-</a>
+      <a href="/" class="transition-transform duration-300 hover:scale-105">
+        <img src="/img/logo.png" alt="MirajoAI Logo"
+          class="h-20 w-20 object-contain shadow-none bg-transparent border-none"
+          style="background: transparent; box-shadow: none; border: none;"   />
+      </a>
 
       <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
         <a href="/" class="hover:text-[var(--brand-teal)] transition">Home</a>
@@ -335,7 +335,7 @@
       </ul>
       <a href="https://buy.stripe.com/cNibJ12SZfUv3xxdyHfEk0r"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
-       I Want Brilliant
+        I Want Brilliant
       </a>
     </div>
 
@@ -579,79 +579,164 @@
           4 User Logins
         </li>
       </ul>
-      <a href="https://buy.stripe.com/8x23cv3X3cIj5FFeCLfEk0q"
-        class=" block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90
+      <a href="https://buy.stripe.com/8x23cv3X3cIj5FFeCLfEk0q" class=" block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90
         transition">
-      I Want Brilliant
+        I Want Brilliant
       </a>
     </div>
   </div>
-<!-- Add-Ons Section -->
-<section class="py-16 px-6 bg-white fade-up">
-  <div class="max-w-5xl mx-auto text-center mb-10">
-    <h2 class="text-3xl font-bold text-gray-800 mb-4">Customize Your Plan</h2>
-    <p class="text-gray-600 text-lg">Enhance your experience with optional add-ons designed for flexibility and scale.</p>
-  </div>
-
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
-    <!-- Additional Users -->
-    <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
-      <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">Additional Users</h3>
-      <p class="text-gray-700 mb-2 text-sm">Add extra users to your team and expand access across roles.</p>
-      <p class="text-gray-900 font-bold text-lg">$5<span class="text-sm font-medium text-gray-600"> /mo per user</span></p>
+  <!-- Add-Ons Section -->
+  <section class="py-16 px-6 bg-white fade-up">
+    <div class="max-w-5xl mx-auto text-center mb-10">
+      <h2 class="text-3xl font-bold text-gray-800 mb-4">Customize Your Plan</h2>
+      <p class="text-gray-600 text-lg">Enhance your experience with optional add-ons designed for flexibility and scale.
+      </p>
     </div>
 
-    <!-- Additional Languages -->
-    <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
-      <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">Additional Languages</h3>
-      <p class="text-gray-700 mb-2 text-sm">Offer service in more languages. Support up to 7: English, Brazilian Portuguese, Spanish, French, German, Italian, and Dutch.</p>
-      <p class="text-gray-900 font-bold text-lg">$50<span class="text-sm font-medium text-gray-600"> /mo per language</span></p>
-    </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+      <!-- Additional Users -->
+      <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
+        <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">Additional Users</h3>
+        <p class="text-gray-700 mb-2 text-sm">Add extra users to your team and expand access across roles.</p>
+        <p class="text-gray-900 font-bold text-lg">$5<span class="text-sm font-medium text-gray-600"> /mo per
+            user</span></p>
+      </div>
 
-    <!-- HIPAA Compliance -->
-    <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
-      <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">HIPAA Compliance</h3>
-      <p class="text-gray-700 mb-2 text-sm">Secure your data for healthcare and related industries. Applies per chatbot or voice agent.</p>
-      <p class="text-gray-900 font-bold text-lg">$450<span class="text-sm font-medium text-gray-600"> /mo per agent</span></p>
+      <!-- Additional Languages -->
+      <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
+        <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">Additional Languages</h3>
+        <p class="text-gray-700 mb-2 text-sm">Offer service in more languages. Support up to 7: English, Brazilian
+          Portuguese, Spanish, French, German, Italian, and Dutch.</p>
+        <p class="text-gray-900 font-bold text-lg">$50<span class="text-sm font-medium text-gray-600"> /mo per
+            language</span></p>
+      </div>
+
+      <!-- HIPAA Compliance -->
+      <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
+        <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">HIPAA Compliance</h3>
+        <p class="text-gray-700 mb-2 text-sm">Secure your data for healthcare and related industries. Applies per
+          chatbot or voice agent.</p>
+        <p class="text-gray-900 font-bold text-lg">$450<span class="text-sm font-medium text-gray-600"> /mo per
+            agent</span></p>
+      </div>
     </div>
-  </div>
-</section>
-<!-- Plan Comparison Section -->
-<section class="py-16 bg-white fade-up px-6">
-  <div class="max-w-4xl mx-auto">
-    <h2 class="text-3xl font-bold text-center text-gray-800 mb-10">Plan Comparison</h2>
-    <div class="overflow-x-auto rounded-2xl border border-gray-200 shadow-md">
-      <table class="min-w-full text-sm text-left text-gray-800 table-auto">
-        <thead class="bg-gray-50 border-b border-gray-200">
-          <tr>
-            <th class="px-4 py-4 text-base font-semibold">Feature</th>
-            <th class="px-4 py-4 text-center text-[var(--brand-teal)] font-semibold">Smart</th>
-            <th class="px-4 py-4 text-center text-indigo-600 font-semibold">Genius</th>
-            <th class="px-4 py-4 text-center text-[var(--brand-teal)] font-semibold">Brilliant</th>
-          </tr>
-        </thead>
-        <tbody class="divide-y divide-gray-100">
-          <tr><td class="px-4 py-3">Monthly Price</td><td class="text-center">$297</td><td class="text-center">$497</td><td class="text-center">$997</td></tr>
-          <tr><td class="px-4 py-3">Annual Price (10% Off)</td><td class="text-center">$3,207</td><td class="text-center">$4,830</td><td class="text-center">$10,767</td></tr>
-          <tr><td class="px-4 py-3">Human-Trained Chatbots</td><td class="text-center">1</td><td class="text-center">2</td><td class="text-center">2</td></tr>
-          <tr><td class="px-4 py-3">AI Voice Agent</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">CRM Access</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">Multichannel Messaging</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">Calendar Booking Integration</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">Round-Robin Calendar Routing</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">Prompt Refinement</td><td class="text-center">Light</td><td class="text-center">Light</td><td class="text-center">Ongoing</td></tr>
-          <tr><td class="px-4 py-3">Workflow Strategy & Consulting</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">Languages Included</td><td class="text-center">1</td><td class="text-center">1</td><td class="text-center">2</td></tr>
-          <tr><td class="px-4 py-3">Mobile App Access</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">User Logins</td><td class="text-center">2</td><td class="text-center">3</td><td class="text-center">4</td></tr>
-          <tr><td class="px-4 py-3">GDPR Compliant</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">HIPAA Ready (Add-On)</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
-          <tr><td class="px-4 py-3">Priority Support Line</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
-        </tbody>
-      </table>
+  </section>
+  <!-- Plan Comparison Section -->
+  <section class="py-16 bg-white fade-up px-6">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-3xl font-bold text-center text-gray-800 mb-10">Plan Comparison</h2>
+      <div class="overflow-x-auto rounded-2xl border border-gray-200 shadow-md">
+        <table class="min-w-full text-sm text-left text-gray-800 table-auto">
+          <thead class="bg-gray-50 border-b border-gray-200">
+            <tr>
+              <th class="px-4 py-4 text-base font-semibold">Feature</th>
+              <th class="px-4 py-4 text-center text-[var(--brand-teal)] font-semibold">Smart</th>
+              <th class="px-4 py-4 text-center text-indigo-600 font-semibold">Genius</th>
+              <th class="px-4 py-4 text-center text-[var(--brand-teal)] font-semibold">Brilliant</th>
+            </tr>
+          </thead>
+          <tbody class="divide-y divide-gray-100">
+            <tr>
+              <td class="px-4 py-3">Monthly Price</td>
+              <td class="text-center">$297</td>
+              <td class="text-center">$497</td>
+              <td class="text-center">$997</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Annual Price (10% Off)</td>
+              <td class="text-center">$3,207</td>
+              <td class="text-center">$4,830</td>
+              <td class="text-center">$10,767</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Human-Trained Chatbots</td>
+              <td class="text-center">1</td>
+              <td class="text-center">2</td>
+              <td class="text-center">2</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">AI Voice Agent</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">CRM Access</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Multichannel Messaging</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Calendar Booking Integration</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Round-Robin Calendar Routing</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Prompt Refinement</td>
+              <td class="text-center">Light</td>
+              <td class="text-center">Light</td>
+              <td class="text-center">Ongoing</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Workflow Strategy & Consulting</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Languages Included</td>
+              <td class="text-center">1</td>
+              <td class="text-center">1</td>
+              <td class="text-center">2</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Mobile App Access</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">User Logins</td>
+              <td class="text-center">2</td>
+              <td class="text-center">3</td>
+              <td class="text-center">4</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">GDPR Compliant</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">HIPAA Ready (Add-On)</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+              <td class="text-center">✔</td>
+            </tr>
+            <tr>
+              <td class="px-4 py-3">Priority Support Line</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center text-gray-400">—</td>
+              <td class="text-center">✔</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <script>
     // mobile menu
@@ -681,7 +766,8 @@
           </svg>
         </button>
       </a>
-      <a href="#">
+      <a href="https://api.leadconnectorhq.com/widget/form/ugRWgZyGNmk4kFNN80Ml" target="_blank"
+        rel="noopener noreferrer">
         <button
           class="group bg-[var(--brand-teal)] text-white px-6 py-3 rounded-full font-semibold shadow-xl hover:bg-[#166963] hover:scale-105 transition-all duration-300 hover:shadow-[0_0_20px_1a767faa] flex items-center gap-2">
           Request a free walkthrough
@@ -691,7 +777,7 @@
             stroke-linejoin="round">
             <path d="M5 12h14M12 5l7 7-7 7" />
           </svg>
-        </button>
+            </button>
       </a>
     </div>
   </section>
