Updated demo form link and CTA behavior

--- a/index.html
+++ b/index.html
@@ -395,13 +395,16 @@
     </style>
 
     </div>
-  <!-- 🟡 CTA Button (Modal Trigger) -->
-<div class="flex justify-center mt-6">
-  <button onclick="document.getElementById('demoModal').style.display='flex'"
-    class="bg-[#ffcd30] text-white text-base font-semibold animate-bounce px-8 py-3 rounded-full shadow-lg hover:bg-[#e6b800] hover:scale-105 transition-all duration-300">
-    Book a Demo
-  </button>
-</div>
+    <!-- 🟡 CTA Button (Centered + Enhanced) -->
+    <div class="flex justify-center mt-6">
+        <a href="https://api.leadconnectorhq.com/widget/form/ugRWgZyGNmk4kFNN80Ml" target="_blank"
+            rel="noopener noreferrer">
+            <button
+                class="bg-[#ffcd30] text-white text-base font-semibold animate-bounce px-8 py-3 rounded-full shadow-lg hover:bg-[#e6b800] hover:scale-105 transition-all duration-300">
+                Book a Demo
+            </button>
+                </a>
+    </div>
 
 
 
@@ -2267,21 +2270,6 @@
     </div>
 
     </section>
-    <!-- 🔮 Modal Container -->
-<div id="demoModal"
-  class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
-  <div class="bg-white w-[90%] md:w-[600px] p-6 rounded-lg relative shadow-xl">
-    <!-- ❌ Close Button -->
-    <button onclick="document.getElementById('demoModal').style.display='none'"
-      class="absolute top-2 right-4 text-gray-500 text-2xl font-bold hover:text-gray-700 transition-all duration-200">
-      ×
-    </button>
-
-    <!-- 📋 Embedded Form -->
-    <iframe src="https://api.leadconnectorhq.com/widget/form/ugRWgZyGNmk4kFNN80Ml"
-      class="w-full h-[600px] border-none"></iframe>
-  </div>
-</div>
 </body>
 
 </html>
