--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
             <!-- Logo -->
             <a href="/" class="transition-transform duration-300 hover:scale-105">
-                <img src="img/logo.png" alt="MirajoAI Logo"
+                <img src="img/nav.png" alt="MirajoAI Logo"
                     class="h-20 w-20 object-contain shadow-none bg-transparent border-none"
                     style="background: transparent; box-shadow: none; border: none;"   />
             </a>
