Removed target=_blank from Get Started CTA for same-tab navigation

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
 
                             <!-- CTA -->
                             <div class="text-center mt-2">
-                                <a href="/pricing" target="_blank"
+                                <a href="/pricing"
                                     class="inline-block bg-[#ffcd30] text-white text-xs font-medium px-3 py-1.5 rounded-full hover:bg-[#e6b800] hover:scale-105 transition">
                                     Get Started
                                 </a>
