--- a/terms.html
+++ b/terms.html
@@ -56,79 +56,92 @@
 
     <!-- ✅ MAIN START -->
     <main class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6 md:p-12 text-sm md:text-base mt-10">
-        <h1 class="text-3xl font-bold text-[#1a767f] mb-6">Privacy Policy</h1>
+        <h1 class="text-3xl font-bold text-[#1a767f] mb-6">Terms of Service</h1>
         <p class="mb-4">Effective Date: March 18th, 2025</p>
+
         <p class="mb-6">
-            At Mirajo Agency, accessible from
-            <a href="http://www.mirajoagency.org" class="text-blue-600 underline" target="_blank"
-                rel="noopener noreferrer">www.mirajoagency.org</a>,
-            we are committed to protecting your privacy. This Privacy Policy outlines the types of personal information
-            we collect, how we use it, and your rights regarding that information.
+            Welcome to The Mirajo Agency. By accessing or using our platform and services, you agree to comply with and
+            be bound by these Terms of Service.
         </p>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Information We Collect</h2>
-        <p class="mb-4">We may collect personal information from you when you visit our site, register, subscribe,
-            respond to a survey, or fill out a form. This includes:</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">What You Can Expect</h2>
         <ul class="list-disc list-inside mb-6 space-y-2">
-            <li>Name</li>
-            <li>Email address</li>
-            <li>Phone number</li>
-            <li>Mailing address</li>
-            <li>Other information you provide us</li>
-        </ul>
-        <p class="mb-6 font-medium">No mobile information will be shared with third parties/affiliates for
-            marketing/promotional purposes. Subcontractors may access data only for support services. Text messaging
-            originator opt-in data and consent will not be shared with any third parties.</p>
-
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">How We Use Your Information</h2>
-        <ul class="list-disc list-inside mb-6 space-y-2">
-            <li>To personalize your experience</li>
-            <li>To improve our website</li>
-            <li>To process transactions</li>
-            <li>To send periodic emails</li>
-            <li>To respond to inquiries and requests</li>
+            <li>You can cancel the SMS service at any time by texting "STOP" to the short code. We will confirm your
+                unsubscribe status via SMS. To rejoin, simply sign up again.</li>
+            <li>For help, reply with "HELP" or contact <a href="mailto:support@mirajoagency.org"
+                    class="underline text-blue-600">support@mirajoagency.org</a> or call 727-485-9941.</li>
+            <li>Carriers are not liable for delayed or undelivered messages.</li>
+            <li>Message and data rates may apply. Frequency varies. Contact your wireless provider with questions.</li>
+            <li>Privacy-related inquiries: <a
+                    href="https://app.gohighlevel.com/v2/preview/rYeJB2Rb5j4A1suTHcum?notrack=true"
+                    class="underline text-blue-600" target="_blank">Privacy Policy</a></li>
         </ul>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">How We Protect Your Information</h2>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">1. Acceptance of Terms</h2>
+        <p class="mb-6">By registering for an account or using our services, you agree to these Terms and our Privacy
+            Policy. If you are using our platform on behalf of an organization, you represent you have the authority to
+            bind it to these Terms.</p>
+
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">2. Eligibility</h2>
+        <p class="mb-6">You must be at least 18 years old and legally capable of entering a contract to use our
+            services. If you are prohibited by law in your location, you may not use the platform.</p>
+
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">3. Account Ownership and Responsibility</h2>
+        <p class="mb-6">You're responsible for maintaining the confidentiality of your login credentials and for all
+            activity under your account. If you’re acting on behalf of a business, that entity is the legal owner.</p>
+
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">4. Acceptable Use</h2>
         <ul class="list-disc list-inside mb-6 space-y-2">
-            <li>SSL (Secure Socket Layer) encryption</li>
-            <li>Regular malware scanning</li>
-            <li>Restricted access to personal data</li>
+            <li>Do not violate laws or regulations</li>
+            <li>Do not infringe on intellectual property</li>
+            <li>Do not upload harmful or malicious content</li>
+            <li>Do not misrepresent affiliations</li>
+            <li>Do not attempt unauthorized access</li>
         </ul>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Sharing Your Information</h2>
-        <p class="mb-6">We do not sell or trade your personal info. We may share it with trusted service providers who
-            help operate our website or support you, provided they agree to confidentiality terms.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">5. Subscription, Payments, and Refunds</h2>
+        <p class="mb-6">The Mirajo Agency uses a subscription billing model. All fees are non-refundable unless stated
+            otherwise in a written agreement or required by law.</p>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Third-Party Services</h2>
-        <p class="mb-6">We may occasionally offer third-party products or services. These sites have their own privacy
-            policies. We are not responsible for their content or actions.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">6. Data and Privacy</h2>
+        <p class="mb-6">We take your privacy seriously. See our <a
+                href="https://app.gohighlevel.com/v2/preview/rYeJB2Rb5j4A1suTHcum?notrack=true"
+                class="underline text-blue-600" target="_blank">Privacy Policy</a> for details on how we collect and use
+            your data.</p>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Cookies</h2>
-        <p class="mb-6">We may use cookies to enhance your experience. You may set your browser to reject cookies, but
-            some parts of the site may not work properly.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">7. Termination and Suspension</h2>
+        <p class="mb-6">We may suspend or terminate access to our services at our discretion, especially in cases of
+            misuse, fraud, or non-payment.</p>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Your Rights</h2>
-        <ul class="list-disc list-inside mb-6 space-y-2">
-            <li>Access the personal data we hold about you</li>
-            <li>Request correction of inaccurate data</li>
-            <li>Request deletion of your personal data</li>
-            <li>Withdraw consent at any time</li>
-        </ul>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">8. Intellectual Property</h2>
+        <p class="mb-6">All content and software provided remain the property of The Mirajo Agency or our licensors. You
+            may not copy or redistribute without permission.</p>
 
-        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Changes to This Policy</h2>
-        <p class="mb-6">We may update this Privacy Policy from time to time. Any changes will be posted on this page.
-            You are advised to review it periodically.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">9. Limitation of Liability</h2>
+        <p class="mb-6">We are not liable for indirect, incidental, or consequential damages arising from use of the
+            services, to the maximum extent allowed by law.</p>
+
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">10. Indemnification</h2>
+        <p class="mb-6">You agree to indemnify The Mirajo Agency from any claims, damages, or losses due to your use of
+            the services or breach of these Terms.</p>
+
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">11. Governing Law and Dispute Resolution</h2>
+        <p class="mb-6">These Terms are governed by the laws of Florida. Disputes must be resolved via binding
+            arbitration in Florida, not class actions.</p>
+
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">12. Updates to Terms</h2>
+        <p class="mb-6">We may revise these Terms at any time. Continued use after changes indicates your acceptance of
+            the new terms.</p>
 
         <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Contact Us</h2>
         <p class="mb-1">Email: <a href="mailto:support@mirajoagency.org"
                 class="underline text-blue-600">support@mirajoagency.org</a></p>
         <p class="mb-1">Phone: 727-485-9941</p>
-        <p class="mb-6">Address: St. Petersburg, FL</p>
+        <p class="mb-6">Website: <a href="https://www.mirajoagency.com" class="underline text-blue-600"
+                target="_blank">https://www.mirajoagency.com</a></p>
     </main>
     <!-- ✅ MAIN END -->
 
-    <!-- ✅ FOOTER START -->
     <!-- ✅ FOOTER START -->
     <footer class="bg-white text-black py-6 px-4 rounded-xl shadow-md w-full max-w-3xl mx-auto mt-16">
         <div class="flex flex-col items-center justify-center text-center gap-4">
