Updated terms and privacy pages

--- a/terms.html
+++ b/terms.html
@@ -105,7 +105,7 @@
 
         <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">6. Data and Privacy</h2>
         <p class="mb-6">We take your privacy seriously. See our <a
-                href="https://app.gohighlevel.com/v2/preview/rYeJB2Rb5j4A1suTHcum?notrack=true"
+                href="/privacy"
                 class="underline text-blue-600" target="_blank">Privacy Policy</a> for details on how we collect and use
             your data.</p>
 
