Replaced footer payment links across all files

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -790,7 +790,7 @@
       <!-- Social + Email Icons -->
       <div class="flex flex-wrap items-center justify-center gap-6">
         <!-- Instagram -->
-        <a href="https://www.instagram.com/mirajobrands?igsh=djZ4ZnJpeW9kcWly&utm_source=qr" target="_blank"
+        <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
           rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path
@@ -799,7 +799,7 @@
         </a>
 
         <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/company/mirajocollective/" target="_blank" rel="noopener noreferrer"
+        <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
           class="hover:text-[#1a767f] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path
