--- a/book-a-demo.html
+++ b/book-a-demo.html
@@ -77,7 +77,7 @@
 
       <!-- Social Icons -->
       <div class="flex flex-wrap items-center justify-center gap-6">
-        <a href="https://www.instagram.com/mirajobrands?igsh=djZ4ZnJpeW9kcWly&utm_source=qr" target="_blank"
+        <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
           rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path
@@ -85,22 +85,22 @@
           </svg>
         </a>
 
-        <a href="https://www.linkedin.com/company/mirajocollective/" target="_blank" rel="noopener noreferrer"
-          class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
-          </svg>
-        </a>
+            <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
+                    rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                    </svg>
+                </a>
 
-        <a href="https://www.facebook.com/mirajocollective" target="_blank" rel="noopener noreferrer"
-          class="hover:text-[#1a767f] transition">
-          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-            <path
-              d="M22.675 0H1.326C.593 0 0 .593 0 1.326v21.348C0 23.406.593 24 1.326 24H12.82v-9.294H9.692V11.13h3.127V8.41c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.464.099 2.796.143v3.24l-1.919.001c-1.504 0-1.796.715-1.796 1.763v2.312h3.587l-.467 3.576h-3.12V24h6.116C23.406 24 24 23.406 24 22.674V1.326C24 .593 23.406 0 22.675 0z" />
-          </svg>
-        </a>
-
+                <!-- LinkedIn -->
+                <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
+                    class="hover:text-[#1a767f] transition">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                    </svg>
+                </a>
         <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
           class="hover:text-[#1a767f] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
