--- a/privacy.html
+++ b/privacy.html
@@ -152,23 +152,22 @@
             <!-- Social Icons -->
             <div class="flex flex-wrap items-center justify-center gap-6">
                 <!-- Instagram -->
-                <a href="https://www.instagram.com/mirajobrands?igsh=djZ4ZnJpeW9kcWly&utm_source=qr" target="_blank"
+                <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
                     rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                        <path
-                            d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zM12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-2a1 1 0 100 2 1 1 0 000-2z" />
-                    </svg>
-                </a>
-
-                <!-- LinkedIn -->
-                <a href="https://www.linkedin.com/company/mirajocollective/" target="_blank" rel="noopener noreferrer"
-                    class="hover:text-[#1a767f] transition">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
                             d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
                     </svg>
                 </a>
 
+                <!-- LinkedIn -->
+                <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
+                    class="hover:text-[#1a767f] transition">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                        <path
+                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                    </svg>
+                </a>
                 <!-- Facebook -->
                 <a href="https://www.facebook.com/mirajocollective" target="_blank" rel="noopener noreferrer"
                     class="hover:text-[#1a767f] transition">
