--- a/terms.html
+++ b/terms.html
@@ -56,91 +56,89 @@
 
     <!-- ✅ MAIN START -->
     <main class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6 md:p-12 text-sm md:text-base mt-10">
-    <h1 class="text-3xl font-bold text-[#1a767f] mb-6">Terms of Service</h1>
-    <p class="mb-4">Effective Date: March 18th, 2025</p>
+        <h1 class="text-3xl font-bold text-[#1a767f] mb-6">Terms of Service</h1>
+        <p class="mb-4">Effective Date: March 18th, 2025</p>
 
-    <p class="mb-6">
-        Welcome to The Mirajo Agency. By accessing or using our platform and services, you agree to comply with and
-        be bound by these Terms of Service.
-    </p>
+        <p class="mb-6">
+            Welcome to The Mirajo Agency. By accessing or using our platform and services, you agree to comply with and
+            be bound by these Terms of Service.
+        </p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">What You Can Expect</h2>
-    <ul class="list-disc list-inside mb-6 space-y-2">
-        <li>You can cancel the SMS service at any time by texting "STOP" to the short code. We will confirm your
-            unsubscribe status via SMS. To rejoin, simply sign up again.</li>
-        <li>For help, reply with "HELP" or contact <a href="mailto:support@mirajoagency.org"
-                class="underline text-blue-600">support@mirajoagency.org</a> or call 727-485-9941.</li>
-        <li>Carriers are not liable for delayed or undelivered messages.</li>
-        <li>Message and data rates may apply. Frequency varies. Contact your wireless provider with questions.</li>
-        <li>Privacy-related inquiries: <a
-                href="/privacy"
-                class="underline text-blue-600" target="_blank">Privacy Policy</a></li>
-    </ul>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">What You Can Expect</h2>
+        <ul class="list-disc list-inside mb-6 space-y-2">
+            <li>You can cancel the SMS service at any time by texting "STOP" to the short code. We will confirm your
+                unsubscribe status via SMS. To rejoin, simply sign up again.</li>
+            <li>For help, reply with "HELP" or contact <a href="mailto:support@mirajoagency.org"
+                    class="underline text-blue-600">support@mirajoagency.org</a> or call 727-485-9941.</li>
+            <li>Carriers are not liable for delayed or undelivered messages.</li>
+            <li>Message and data rates may apply. Frequency varies. Contact your wireless provider with questions.</li>
+            <li>Privacy-related inquiries: <a href="/privacy" class="underline text-blue-600" target="_blank">Privacy
+                    Policy</a></li>
+        </ul>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">1. Acceptance of Terms</h2>
-    <p class="mb-6">By registering for an account or using our services, you agree to these Terms and our Privacy
-        Policy. If you are using our platform on behalf of an organization, you represent you have the authority to
-        bind it to these Terms.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">1. Acceptance of Terms</h2>
+        <p class="mb-6">By registering for an account or using our services, you agree to these Terms and our Privacy
+            Policy. If you are using our platform on behalf of an organization, you represent you have the authority to
+            bind it to these Terms.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">2. Eligibility</h2>
-    <p class="mb-6">You must be at least 18 years old and legally capable of entering a contract to use our
-        services. If you are prohibited by law in your location, you may not use the platform.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">2. Eligibility</h2>
+        <p class="mb-6">You must be at least 18 years old and legally capable of entering a contract to use our
+            services. If you are prohibited by law in your location, you may not use the platform.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">3. Account Ownership and Responsibility</h2>
-    <p class="mb-6">You're responsible for maintaining the confidentiality of your login credentials and for all
-        activity under your account. If you’re acting on behalf of a business, that entity is the legal owner.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">3. Account Ownership and Responsibility</h2>
+        <p class="mb-6">You're responsible for maintaining the confidentiality of your login credentials and for all
+            activity under your account. If you’re acting on behalf of a business, that entity is the legal owner.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">4. Acceptable Use</h2>
-    <ul class="list-disc list-inside mb-6 space-y-2">
-        <li>Do not violate laws or regulations</li>
-        <li>Do not infringe on intellectual property</li>
-        <li>Do not upload harmful or malicious content</li>
-        <li>Do not misrepresent affiliations</li>
-        <li>Do not attempt unauthorized access</li>
-    </ul>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">4. Acceptable Use</h2>
+        <ul class="list-disc list-inside mb-6 space-y-2">
+            <li>Do not violate laws or regulations</li>
+            <li>Do not infringe on intellectual property</li>
+            <li>Do not upload harmful or malicious content</li>
+            <li>Do not misrepresent affiliations</li>
+            <li>Do not attempt unauthorized access</li>
+        </ul>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">5. Subscription, Payments, and Refunds</h2>
-    <p class="mb-6">The Mirajo Agency uses a subscription billing model. All fees are non-refundable unless stated
-        otherwise in a written agreement or required by law.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">5. Subscription, Payments, and Refunds</h2>
+        <p class="mb-6">The Mirajo Agency uses a subscription billing model. All fees are non-refundable unless stated
+            otherwise in a written agreement or required by law.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">6. Data and Privacy</h2>
-    <p class="mb-6">We take your privacy seriously. See our <a
-            href="/privacy"
-            class="underline text-blue-600" target="_blank">Privacy Policy</a> for details on how we collect and use
-        your data.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">6. Data and Privacy</h2>
+        <p class="mb-6">We take your privacy seriously. See our <a href="/privacy" class="underline text-blue-600"
+                target="_blank">Privacy Policy</a> for details on how we collect and use
+            your data.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">7. Termination and Suspension</h2>
-    <p class="mb-6">We may suspend or terminate access to our services at our discretion, especially in cases of
-        misuse, fraud, or non-payment.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">7. Termination and Suspension</h2>
+        <p class="mb-6">We may suspend or terminate access to our services at our discretion, especially in cases of
+            misuse, fraud, or non-payment.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">8. Intellectual Property</h2>
-    <p class="mb-6">All content and software provided remain the property of The Mirajo Agency or our licensors. You
-        may not copy or redistribute without permission.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">8. Intellectual Property</h2>
+        <p class="mb-6">All content and software provided remain the property of The Mirajo Agency or our licensors. You
+            may not copy or redistribute without permission.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">9. Limitation of Liability</h2>
-    <p class="mb-6">We are not liable for indirect, incidental, or consequential damages arising from use of the
-        services, to the maximum extent allowed by law.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">9. Limitation of Liability</h2>
+        <p class="mb-6">We are not liable for indirect, incidental, or consequential damages arising from use of the
+            services, to the maximum extent allowed by law.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">10. Indemnification</h2>
-    <p class="mb-6">You agree to indemnify The Mirajo Agency from any claims, damages, or losses due to your use of
-        the services or breach of these Terms.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">10. Indemnification</h2>
+        <p class="mb-6">You agree to indemnify The Mirajo Agency from any claims, damages, or losses due to your use of
+            the services or breach of these Terms.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">11. Governing Law and Dispute Resolution</h2>
-    <p class="mb-6">These Terms are governed by the laws of Florida. Disputes must be resolved via binding
-        arbitration in Florida, not class actions.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">11. Governing Law and Dispute Resolution</h2>
+        <p class="mb-6">These Terms are governed by the laws of Florida. Disputes must be resolved via binding
+            arbitration in Florida, not class actions.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">12. Updates to Terms</h2>
-    <p class="mb-6">We may revise these Terms at any time. Continued use after changes indicates your acceptance of
-        the new terms.</p>
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">12. Updates to Terms</h2>
+        <p class="mb-6">We may revise these Terms at any time. Continued use after changes indicates your acceptance of
+            the new terms.</p>
 
-    <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Contact Us</h2>
-    <p class="mb-1">Email: <a href="mailto:support@mirajoagency.org"
-            class="underline text-blue-600">support@mirajoagency.org</a></p>
-    <p class="mb-1">Phone: 727-485-9941</p>
-    <p class="mb-6">Website: <a href="https://www.mirajoagency.com" class="underline text-blue-600"
-            target="_blank">https://www.mirajoagency.com</a></p>
-</main>
-<!-- ✅ MAIN END -->
+        <h2 class="text-xl font-semibold text-[#1a767f] mt-6 mb-2">Contact Us</h2>
+        <p class="mb-1">Email: <a href="mailto:support@mirajoagency.org"
+                class="underline text-blue-600">support@mirajoagency.org</a></p>
+        <p class="mb-1">Phone: 727-485-9941</p>
+        <p class="mb-6">Website: <a href="https://www.mirajoagency.com" class="underline text-blue-600"
+                target="_blank">https://www.mirajoagency.com</a></p>
+    </main>
+    <!-- ✅ MAIN END -->
 
     <!-- ✅ FOOTER START -->
     <footer class="bg-white text-black py-6 px-4 rounded-xl shadow-md w-full max-w-3xl mx-auto mt-16">
@@ -148,16 +146,17 @@
             <!-- Social Icons -->
             <div class="flex flex-wrap items-center justify-center gap-6">
                 <!-- Instagram -->
-                <a href="https://www.instagram.com/mirajobrands?igsh=djZ4ZnJpeW9kcWly&utm_source=qr" target="_blank"
+
+                <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
                     rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
-                            d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zM12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-2a1 1 0 100 2 1 1 0 000-2z" />
+                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
                     </svg>
                 </a>
 
                 <!-- LinkedIn -->
-                <a href="https://www.linkedin.com/company/mirajocollective/" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
                     class="hover:text-[#1a767f] transition">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
