Updated layout and sections for Enlov site: hero, ritual, about

--- a/book-a-demo.html
+++ b/book-a-demo.html
@@ -33,7 +33,7 @@
         <a href="/pricing" class="hover:text-[#1a767f] transition-colors duration-200">Pricing</a>
         <a href="https://home.mirajoco.org/" class="hover:text-[#1a767f] transition-colors duration-200">MiRAjO
           Collective</a>
-        <a href="https://login.mirajoagency.org/" target="_blank"
+        <a href="https://app.mirajo.ai/" target="_blank"
           class="hover:text-[#1a767f] transition-colors duration-200">Client Login</a>
       </nav>
       <div class="md:hidden">
