--- a/pricing/index.html
+++ b/pricing/index.html
@@ -50,7 +50,7 @@
       <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
         <a href="/" class="hover:text-[var(--brand-teal)] transition">Home</a>
         <a href="https://home.mirajoco.org/" class="hover:text-[var(--brand-teal)] transition">MiRAjO Collective</a>
-        <a href="https://login.mirajoagency.org/" class="hover:text-[var(--brand-teal)] transition">Client Login</a>
+        <a href="https://app.mirajo.ai/" class="hover:text-[var(--brand-teal)] transition">Client Login</a>
       </nav>
       <button id="menu-toggle" class="md:hidden text-gray-700 focus:outline-none">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
