Updated payment links on pricing page

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -213,7 +213,7 @@
           Live chat included
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/6888506cddc6a6d917c59f33"
+      <a href="https://buy.stripe.com/dRm14n8djgYz7NNamvfEk0M"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
         Get Started
       </a>
@@ -274,7 +274,7 @@
           Priority support
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/688a714deba1103b148e0274"
+      <a href="https://buy.stripe.com/14AbJ10KR0ZBaZZdyHfEk0E"
         class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition">
         Start with Genius
       </a>
@@ -333,7 +333,7 @@
           Full analytics dashboard
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/688a717addc6a6495bc5ac6b"
+      <a href="https://buy.stripe.com/8x2eVd1OVbEf5FF2U3fEk0L"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
         I Want Brilliant
       </a>
@@ -420,7 +420,7 @@
           2 User Logins
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/688aabf3ddc6a6db74c5aea5"
+      <a href="https://buy.stripe.com/4gMaEX3X36jV0ll2U3fEk0N"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
         Get Started
       </a>
@@ -495,7 +495,7 @@
           3 User Logins
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/688a7176d6ab80599fe6fe22"
+      <a href="https://buy.stripe.com/bJe8wPfFLdMn1pp66ffEk0F"
         class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition">
         Start with Genius
       </a>
@@ -579,7 +579,7 @@
           4 User Logins
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/688a7178d6ab804f14e6fe24" class=" block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90
+      <a href="https://buy.stripe.com/7sY00j0KR7nZ1ppamvfEk0O" class=" block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90
         transition">
         I Want Brilliant
       </a>
