Update pricing page

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -163,7 +163,7 @@
         <li class="flex items-center gap-2">Prompt setup (one-time)</li>
         <li class="flex items-center gap-2">2 user logins · Email/Chat support</li>
       </ul>
-      <a href="#" class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition" aria-label="Choose Reception Pro">Start with Reception Pro</a>
+      <a href="https://buy.stripe.com/7sY28r0KR5fR8RR2U3fEk0P" class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition" aria-label="Choose Reception Pro">Start with Reception Pro</a>
     </div>
 
     <!-- Ops Guru (Growth Voice) -->
@@ -179,7 +179,7 @@
         <li class="flex items-center gap-2">Multichannel: SMS, WhatsApp, FB, IG DMs</li>
         <li class="flex items-center gap-2">4 user logins · Chat support</li>
       </ul>
-      <a href="#" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition" aria-label="Choose Ops Guru">Choose Ops Guru</a>
+      <a href="https://buy.stripe.com/fZubJ18djcIj1ppcuDfEk0R" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition" aria-label="Choose Ops Guru">Choose Ops Guru</a>
     </div>
 
     <!-- Business Pilot (Premium Voice) -->
@@ -195,7 +195,7 @@
         <li class="flex items-center gap-2">Multichannel messaging</li>
         <li class="flex items-center gap-2">6 user logins · Phone support</li>
       </ul>
-      <a href="#" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition" aria-label="Choose Business Pilot">I Want Business Pilot</a>
+      <a href="https://buy.stripe.com/6oUcN579f4bN2ttbqzfEk0T" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition" aria-label="Choose Business Pilot">I Want Business Pilot</a>
     </div>
 
     <!-- Mission Control (Enterprise Voice) -->
@@ -248,7 +248,7 @@
         <li>Prompt setup (one-time)</li>
         <li>2 user logins · Email/Chat support</li>
       </ul>
-      <a href="#" class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition">Start with Reception Pro</a>
+      <a href="https://buy.stripe.com/aFadR9bpv7nZ5FF3Y7fEk0Q" class="block bg-indigo-600 text-white font-semibold text-center py-3 rounded-xl hover:bg-indigo-700 transition">Start with Reception Pro</a>
     </div>
 
     <!-- Ops Guru Annual -->
@@ -264,7 +264,7 @@
         <li>Multichannel: SMS, WhatsApp, FB, IG DMs</li>
         <li>4 user logins · Chat support</li>
       </ul>
-      <a href="#" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">Choose Ops Guru</a>
+      <a href="https://buy.stripe.com/cNi7sLdxDgYz6JJ0LVfEk0S" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">Choose Ops Guru</a>
     </div>
 
     <!-- Business Pilot Annual -->
@@ -280,7 +280,7 @@
         <li>Multichannel messaging</li>
         <li>6 user logins · Phone support</li>
       </ul>
-      <a href="#" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">I Want Business Pilot</a>
+      <a href="https://buy.stripe.com/00w00j79faAb6JJgKTfEk0U" class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">I Want Business Pilot</a>
     </div>
 
     <!-- Mission Control Annual -->
