Updated book-a-demo page and added blog directory

--- a/book-a-demo.html
+++ b/book-a-demo.html
@@ -30,6 +30,7 @@
           style="background: transparent; box-shadow: none; border: none;" />
       </a>
       <nav class="space-x-8 hidden md:flex text-black text-base font-light">
+        <a href="/" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
         <a href="/pricing" class="hover:text-[#1a767f] transition-colors duration-200">Pricing</a>
         <a href="https://home.mirajoco.org/" class="hover:text-[#1a767f] transition-colors duration-200">MiRAjO
           Collective</a>
@@ -47,6 +48,7 @@
     </div>
     <div id="mobile-menu"
       class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-bold bg-white border-t border-gray-200">
+      <a href="/" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
       <a href="/pricing" class="block hover:text-[#1a767f] transition">Pricing</a>
       <a href="https://login.mirajoagency.org/" target="_blank" class="block hover:text-[#1a767f] transition">Client
         Login</a>
